log
Thu 21 Mar 2024 05:10:08 PM UTC: 
 tests:  0|5
total_score: 0/70
863a974
Thu 21 Mar 2024 05:24:53 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
8a269aa
Thu 21 Mar 2024 05:29:53 PM UTC: 
 exercises.c | 20 +++++++-------------
 1 file changed, 7 insertions(+), 13 deletions(-)
 tests:  1|4
total_score: 10/70
03808ab
Thu 21 Mar 2024 05:31:31 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
cfe5d29
Thu 21 Mar 2024 05:31:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
38dc786
Thu 21 Mar 2024 05:32:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
562bfb9
Thu 21 Mar 2024 06:11:45 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
0271edb
Thu 21 Mar 2024 06:12:07 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
6318541
Thu 21 Mar 2024 06:16:05 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:75:28: error: invalid use of undefined type ‘struct List’
   75 |     int *dato = (int*)lista[i]
      |                            ^
exercises.c:75:23: error: invalid use of incomplete typedef ‘List’
   75 |     int *dato = (int*)lista[i]
      |                       ^~~~~
exercises.c:76:5: error: expected ‘,’ or ‘;’ before ‘if’
   76 |     if(*dato == elem) {
      |     ^~
exercises.c:75:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   75 |     int *dato = (int*)lista[i]
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
9089134
Thu 21 Mar 2024 06:16:52 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
8919971
Thu 21 Mar 2024 06:17:31 PM UTC: 
 exercises.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  3|2
total_score: 40/70
2d221e0
Thu 21 Mar 2024 06:19:01 PM UTC: 
 exercises.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  3|2
total_score: 40/70
ed56711
Thu 21 Mar 2024 07:33:36 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:94:15: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   94 |   while((dato = pop(P1) != NULL)) {
      |               ^
exercises.c:97:15: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   97 |   while((dato = pop(PAux) != NULL)) {
      |               ^
cc1: all warnings being treated as errors
Compilation failed
0148d59
Thu 21 Mar 2024 07:34:27 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
99d924e
Thu 21 Mar 2024 07:36:33 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:95:23: error: expected ‘)’ before ‘{’ token
   95 |   while((dato != NULL) {
      |        ~              ^~
      |                       )
exercises.c:103:1: error: expected expression before ‘}’ token
  103 | }
      | ^
exercises.c:92:10: error: unused variable ‘PAux’ [-Werror=unused-variable]
   92 |   Stack* PAux = create_stack();
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
aa14aef
Thu 21 Mar 2024 07:38:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
63b02e2
